nginx-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
  labels:
    app: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      nodeSelector:
        kubernetes.io/hostname: "10.0.0.43" # changeme
      containers:
        - image: nginx:1.19.4
          imagePullPolicy: Always
          name: nginx-proxy
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: app-config-volume
              mountPath: /etc/nginx/conf.d
            - name: main-config-volume
              mountPath: /etc/nginx
      volumes:
        - name: app-config-volume
          configMap:
            name: app-conf2
        - name: main-config-volume
          configMap:
            name: main-conf2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-proxy
