nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  labels:
    app: my-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      nodeSelector:
        kubernetes.io/hostname: "xxx" # changeme
      containers:
        - image: nginx:1.19.4
          imagePullPolicy: Always
          name: my-nginx
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: app-config-volume
              mountPath: /etc/nginx/conf.d
            - name: main-config-volume
              mountPath: /etc/nginx
            - name: binary-payload
              mountPath: /usr/share/nginx/bin
      volumes:
        - name: app-config-volume
          configMap:
            name: app-conf
        - name: main-config-volume
          configMap:
            name: main-conf
        - name: binary-payload
          configMap:
            name: binary
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: my-nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nginx.qcloud.com
      http:
        paths:
          - backend:
              serviceName: my-nginx
              servicePort: 80
            path: /
